[gd_scene load_steps=50 format=3 uid="uid://c4jqyhvc7h1i"]

[ext_resource type="Script" path="res://addons/shaker/src/Vector3/shaker_component3D.gd" id="1_nvq1j"]
[ext_resource type="Script" path="res://entities/player/scripts/player.gd" id="1_o6h1d"]
[ext_resource type="Script" path="res://entities/player/scripts/stats.gd" id="2_34ih3"]
[ext_resource type="Script" path="res://addons/shaker/data/Vector3/BaseShakerType3D.gd" id="2_iax84"]
[ext_resource type="Script" path="res://entities/player/scripts/player_camera.gd" id="3_kcw1u"]
[ext_resource type="Script" path="res://addons/shaker/data/Vector3/ShakerPreset3D.gd" id="4_hrb2t"]
[ext_resource type="Script" path="res://addons/shaker/data/Vector3/ShakerTypeSineWave3D.gd" id="6_3sldg"]
[ext_resource type="Script" path="res://addons/shaker/src/Vector3/ShakerReceiver3D.gd" id="6_l8am5"]
[ext_resource type="Script" path="res://entities/player/scripts/interact_ray.gd" id="8_rhn0u"]
[ext_resource type="AudioStream" uid="uid://c657v8e2oa02t" path="res://entities/player/sounds/boom.wav" id="9_gufxx"]
[ext_resource type="Script" path="res://entities/player/scripts/UI.gd" id="10_rqt05"]
[ext_resource type="Script" path="res://entities/player/scripts/crosshair_anchor.gd" id="11_4blbx"]
[ext_resource type="Script" path="res://entities/player/scripts/cursor.gd" id="11_y8mn5"]
[ext_resource type="Material" uid="uid://skv487libhfo" path="res://shaders/negative.tres" id="12_8323r"]
[ext_resource type="Shader" path="res://shaders/negative.gdshader" id="12_s0l7a"]
[ext_resource type="AudioStream" uid="uid://dqhpa1q7fpt7x" path="res://world/windstorm_loop.wav" id="15_0wsn8"]
[ext_resource type="Script" path="res://components/scaled_audio_player.gd" id="16_x8mkt"]
[ext_resource type="AudioStream" uid="uid://cgtj4doh2hxgx" path="res://entities/player/sounds/walk/dirt1.mp3" id="18_sp8wt"]
[ext_resource type="AudioStream" uid="uid://cdrtpt4rai25t" path="res://entities/player/sounds/walk/dirt2.mp3" id="19_ew1cm"]
[ext_resource type="AudioStream" uid="uid://d0u73qtia80vk" path="res://entities/player/sounds/walk/dirt3.mp3" id="20_07j02"]
[ext_resource type="Script" path="res://components/scaled_audio_player_3d.gd" id="20_i2nv4"]
[ext_resource type="AudioStream" uid="uid://dfc7iinnr4d87" path="res://entities/player/sounds/walk/dirt4.mp3" id="21_h1o7d"]
[ext_resource type="Script" path="res://entities/player/scripts/detection_range.gd" id="22_4xvka"]
[ext_resource type="Script" path="res://components/distance_based_component.gd" id="23_h5psl"]
[ext_resource type="AudioStream" uid="uid://bd0ygh0000ljl" path="res://entities/player/sounds/land/land_dirt_1.wav" id="25_100aw"]
[ext_resource type="AudioStream" uid="uid://b256mnd5wx563" path="res://entities/player/sounds/land/land_dirt_2.wav" id="26_njdml"]
[ext_resource type="AudioStream" uid="uid://lfa41c1qvki7" path="res://entities/player/sounds/land/land_dirt_3.wav" id="27_itu1c"]
[ext_resource type="AudioStream" uid="uid://drtawbbg0coat" path="res://entities/player/sounds/land/land_impact_1.wav" id="28_jf3ac"]
[ext_resource type="AudioStream" uid="uid://b70y3p7mwqk8q" path="res://entities/player/sounds/land/land_impact_2.wav" id="29_rx08t"]
[ext_resource type="AudioStream" uid="uid://rdbrt2tmfevv" path="res://entities/player/sounds/land/land_impact_3.wav" id="30_vjcbe"]
[ext_resource type="AudioStream" uid="uid://cr2aydij0x7xb" path="res://entities/player/sounds/jump/jump_1.wav" id="31_j3yna"]
[ext_resource type="Script" path="res://components/signal_connector.gd" id="31_ry2uw"]
[ext_resource type="AudioStream" uid="uid://dtbbtfoic6hj4" path="res://entities/player/sounds/jump/jump_2.wav" id="32_lacb7"]
[ext_resource type="AudioStream" uid="uid://bpybs6sfyob8t" path="res://entities/player/sounds/jump/jump_3.wav" id="33_p0s8x"]

[sub_resource type="Resource" id="Resource_gvtwj"]
script = ExtResource("2_34ih3")
jump_count = 1
speed = 30
speed_mul = 1.0
jump_height = 2.1
jump_peak_time = 0.42
jump_descend_time = 0.4
max_ground_pounds = 3
ground_acceleration = 5.0
minimum_jump_duration = 0.05

[sub_resource type="Resource" id="Resource_con22"]
script = ExtResource("6_3sldg")
frequency = Vector3(1.335, 1.14, 1)
phase = Vector3(1, 1, 1)
amplitude = Vector3(0, 0, 0)
offset = Vector3(0, 0, 0)
BlendingMode = 0
fade_in = 0.0
fade_out = 0.0
start_percent = 0.0
end_percent = 1.0
_temp_graph = false
bake_internal = 64

[sub_resource type="Resource" id="Resource_catu2"]
script = ExtResource("4_hrb2t")
PositionShake = Array[ExtResource("2_iax84")]([])
RotationShake = Array[ExtResource("2_iax84")]([SubResource("Resource_con22")])
ScaleShake = Array[ExtResource("2_iax84")]([])
bake_internal = 64
__follow_timeline = false

[sub_resource type="SphereShape3D" id="SphereShape3D_165qn"]
radius = 1.07827

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lohhf"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1mvl7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w0fuc"]
shader = ExtResource("12_s0l7a")
shader_parameter/alpha = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j0dca"]
shader = ExtResource("12_s0l7a")
shader_parameter/alpha = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kq3p6"]
shader = ExtResource("12_s0l7a")
shader_parameter/alpha = null

[sub_resource type="SphereShape3D" id="SphereShape3D_g5dec"]
radius = 51.387

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_0m48r"]
streams_count = 4
stream_0/stream = ExtResource("18_sp8wt")
stream_1/stream = ExtResource("19_ew1cm")
stream_2/stream = ExtResource("20_07j02")
stream_3/stream = ExtResource("21_h1o7d")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xny7w"]
random_pitch = 1.5
streams_count = 3
stream_0/stream = ExtResource("25_100aw")
stream_1/stream = ExtResource("26_njdml")
stream_2/stream = ExtResource("27_itu1c")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_reuq3"]
random_pitch = 1.5
streams_count = 3
stream_0/stream = ExtResource("28_jf3ac")
stream_1/stream = ExtResource("29_rx08t")
stream_2/stream = ExtResource("30_vjcbe")

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_d6d7n"]
stream_count = 2
stream_0/stream = SubResource("AudioStreamRandomizer_xny7w")
stream_0/volume = 0.0
stream_1/stream = SubResource("AudioStreamRandomizer_reuq3")
stream_1/volume = 0.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_x1hvq"]
random_pitch = 1.5
streams_count = 3
stream_0/stream = ExtResource("31_j3yna")
stream_1/stream = ExtResource("32_lacb7")
stream_2/stream = ExtResource("33_p0s8x")

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("player_camera")]
collision_layer = 8
script = ExtResource("1_o6h1d")
stats = SubResource("Resource_gvtwj")
player_camera = NodePath("PanNode/PlayerCamera")

[node name="PanNode" type="Node3D" parent="."]

[node name="PlayerCamera" type="Camera3D" parent="PanNode" node_paths=PackedStringArray("player", "shaker", "pan_node")]
physics_interpolation_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00826702, 0.583182, 0.0110376)
script = ExtResource("3_kcw1u")
player = NodePath("../..")
shaker = NodePath("../../ShakerComponent3D")
pan_node = NodePath("..")
movement_tilt = 0.085
sensitivity = 23.916

[node name="InteractRay" type="RayCast3D" parent="PanNode/PlayerCamera" node_paths=PackedStringArray("shaker_component")]
target_position = Vector3(0, 0, -30)
collide_with_areas = true
collide_with_bodies = false
script = ExtResource("8_rhn0u")
shaker_component = NodePath("../../../ShakerComponent3D")

[node name="SpotLight3D" type="OmniLight3D" parent="PanNode/PlayerCamera"]

[node name="ShakerComponent3D" type="Node3D" parent="." node_paths=PackedStringArray("Targets")]
script = ExtResource("1_nvq1j")
custom_target = true
Targets = [NodePath("../PanNode/PlayerCamera")]
AutoPlay = true
intensity = 0.319
fade_out = 0.34151
shakerPreset = SubResource("Resource_catu2")

[node name="ShakerReceiver3D" type="Node3D" parent="ShakerComponent3D"]
script = ExtResource("6_l8am5")
exit_fade_out = 10.7896

[node name="Area3D" type="Area3D" parent="ShakerComponent3D/ShakerReceiver3D"]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape3D" type="CollisionShape3D" parent="ShakerComponent3D/ShakerReceiver3D/Area3D"]
shape = SubResource("SphereShape3D_165qn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_lohhf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_1mvl7")

[node name="CanvasLayer" type="CanvasLayer" parent="." node_paths=PackedStringArray("left_rect", "right_rect", "up_rect", "down_rect", "interact_ray")]
script = ExtResource("10_rqt05")
left_rect = NodePath("Control/Control/ColorRect3")
right_rect = NodePath("Control/Control/ColorRect4")
up_rect = NodePath("Control/Control/ColorRect")
down_rect = NodePath("Control/Control/ColorRect2")
interact_ray = NodePath("../PanNode/PlayerCamera/InteractRay")

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_4blbx")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/Control"]
material = ExtResource("12_8323r")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -9.0
offset_right = 2.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_y8mn5")

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/Control/Control"]
material = SubResource("ShaderMaterial_w0fuc")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -2.0
offset_right = -5.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_y8mn5")

[node name="ColorRect4" type="ColorRect" parent="CanvasLayer/Control/Control"]
material = SubResource("ShaderMaterial_j0dca")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -2.0
offset_right = 9.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_y8mn5")

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Control/Control"]
material = SubResource("ShaderMaterial_kq3p6")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = 5.0
offset_right = 2.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_y8mn5")

[node name="DetectionRange" type="Area3D" parent="."]
collision_mask = 64
script = ExtResource("22_4xvka")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionRange"]
shape = SubResource("SphereShape3D_g5dec")

[node name="Sounds" type="Node3D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("15_0wsn8")
volume_db = -10.777
autoplay = true
bus = &"Music"
script = ExtResource("16_x8mkt")

[node name="Footsteps" type="AudioStreamPlayer3D" parent="Sounds"]
stream = SubResource("AudioStreamRandomizer_0m48r")
bus = &"SFX"
script = ExtResource("20_i2nv4")
influence = 0.31

[node name="DistanceBasedComponent" type="Node" parent="Sounds/Footsteps" node_paths=PackedStringArray("target", "callee")]
script = ExtResource("23_h5psl")
target = NodePath("../../..")
callee = NodePath("..")
what_to_call = "play"
desired_axes = 5

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Sounds"]
stream = ExtResource("9_gufxx")
max_polyphony = 136
bus = &"SFX"

[node name="LandSounds" type="AudioStreamPlayer3D" parent="Sounds"]
stream = SubResource("AudioStreamSynchronized_d6d7n")
script = ExtResource("20_i2nv4")

[node name="SignalConnector" type="Node" parent="Sounds/LandSounds" node_paths=PackedStringArray("from", "to")]
script = ExtResource("31_ry2uw")
from = NodePath("../../..")
what = "just_landed"
to = NodePath("..")
method = "play"

[node name="JumpSounds" type="AudioStreamPlayer3D" parent="Sounds"]
stream = SubResource("AudioStreamRandomizer_x1hvq")
script = ExtResource("20_i2nv4")

[node name="SignalConnector" type="Node" parent="Sounds/JumpSounds" node_paths=PackedStringArray("from", "to")]
script = ExtResource("31_ry2uw")
from = NodePath("../../..")
what = "jump_ground"
to = NodePath("..")
method = "play"
